--- a/contrib/translations/de/de_DE.lng
+++ b/contrib/translations/de/de_DE.lng
@@ -7,6 +7,9 @@ Nummer der zu verwendenden Anzeige; die Werte hÑngen vom Betriebssystem und den 
 :CONFIG_VSYNC
 Vertikale Synchronisations-Einstellung nicht implementiert (Einstellung wird ignoriert)
 .
+:CONFIG_VSYNC_SKIP
+Anzahl der Mikrosekunden, die das Rendering verzîgert sein darf, bevor der nÑchste Frame Åbersprungen wird.
+.
 :CONFIG_FULLRESOLUTION
 Welche Auflîsung fÅr den Vollbildmodus verwendet werden soll: 'Original', 'Desktop'
 oder eine feste Grî·e (z.B. 1024x768).
@@ -265,6 +268,32 @@ die Patch-Dateien fÅr die GUS-Wiedergabe enthÑlt.
 Patch-Sets, die mit Timidity verwendet werden,
 sollten gut funktionieren.
 .
+:CONFIG_SIDMODEL
+Modell des Chips, der auf der Innovation SSI-2001 Karte emuliert werden soll:
+ - auto:  WÑhlt den 6581 Chip aus.
+ - 6581:  Der Original-Chip, bekannt fÅr seinen basslastigen und satten Charakter.
+ - 8580:  Eine spÑtere Revision, die der SID-Spezifikation besser entsprach.
+          Er korrigiert die DC-Vorspannung des 6581 und ist weniger anfÑllig fÅr Verzerrungen.
+          Der 8580 ist eine Option auf Reproduktionskarten, wie dem DuoSID.
+ - none:  Deaktiviert die Karte.
+.
+:CONFIG_SIDCLOCK
+Die Taktfrequenz des SID-Chips, die auf Nachbaukarten jumperbar ist.
+ - default: verwendet 0,895 MHz, wie auf der originalen SSI-2001 Karte.
+ - c64ntsc: verwendet 1,023 MHz, fÅr NTSC Commodore PCs und das DuoSID.
+ - c64pal: verwendet 0,985 MHz, fÅr PAL Commodore PCs und das DuoSID.
+ - hardsid: verwendet 1.000 MHz, verfÅgbar auf dem DuoSID.
+.
+:CONFIG_SIDPORT
+Die IO Port Adresse des Innovation SSI-2001.
+.
+:CONFIG_6581FILTER
+Die analoge Filterung des SID bedeutete, dass jeder Chip physikalisch einzigartig war.
+Stellt die FilterstÑrke des 6581 als Prozentwert von 0 bis 100 ein.
+.
+:CONFIG_8580FILTER
+Passt die FilterstÑrke des 8580 als Prozentwert von 0 bis 100 an.
+.
 :CONFIG_PCSPEAKER
 Aktiviere die PC-Lautsprecher-Emulation.
 .
@@ -284,6 +313,9 @@ Sample-Rate des Tandy 3-Voice Generators.
 .
 :CONFIG_DISNEY
 Aktiviere die Disney Sound Source Emulation. (Covox Voice Master und Speech Thing kompatibel).
+.
+:CONFIG_PS1AUDIO
+Aktiviere die IBM PS/1 Audio Emulation.
 .
 :CONFIG_JOYSTICKTYPE
 Typ des zu emulierenden Joysticks: auto (Standard),
@@ -672,7 +704,7 @@ Laufwerks-Cache geleert.
 .
 :PROGRAM_INTRO
 [2J[32;1mWillkommen zu DOSBox Staging[0m, einem x86-Emulator mit Sound und Grafik.
-DOSBox erstellt eine Shell fÅr dich, die wie das altbekannte klassische DOS aussieht.
+DOSBox erstellt eine Shell, die wie das altbekannte klassische DOS aussieht.
 
 FÅr Informationen Åber das grundsÑtzliche Mounten tippe [34;1mintro mount[0m
 FÅr Informationen Åber die CD-ROM UnterstÅtzung tippe [34;1mintro cdrom[0m
@@ -685,8 +717,8 @@ https://github.com/dosbox-staging/dosbox-staging/wiki[0m
 .
 :PROGRAM_INTRO_MOUNT_START
 [2J[32;1mHier sind einige Befehle, die dir den Einstieg erleichtern:[0m
-Bevor du die Dateien, die auf deinem eigenen Dateisystem liegen, benutzen kannst,
-musst du das Verzeichnis, das die Dateien enthÑlt, mounten.
+Bevor du die Dateien, die auf deinem eigenen Dateisystem liegen,
+benutzen kannst, musst du das Verzeichnis, das die Dateien enthÑlt, mounten.
 
 
 .
@@ -707,28 +739,11 @@ musst du das Verzeichnis, das die Dateien enthÑlt, mounten.
 
 .
 :PROGRAM_INTRO_MOUNT_END
-Nach erfolgreichem Mounten der Festplatte kannst du [34;1mc:[0m eingeben, um zu deinem frisch
-gemounteten C-Laufwerk zu wechseln. Wenn du dort [34;1mdir[0m] eingibst, wird der Inhalt angezeigt. [34;1mcd[0m erlaubt es dir
-in ein Verzeichnis zu wechseln (erkennbar am [33;1m[][0m in einer Verzeichnisliste).
+Nach erfolgreichem Mounten der Festplatte kannst du [34;1mc:[0m eingeben,
+um zu deinem frisch gemounteten C-Laufwerk zu wechseln.
+Wenn du dort [34;1mdir[0m] eingibst, wird der Inhalt angezeigt. [34;1mcd[0m erlaubt es dir
+in ein Verzeichnis zu wechseln (erkennbar am [33;1m[][0m in einer Verzeichnisliste).
 Du kannst Programme/Dateien mit den Erweiterungen [31m.exe .bat[0m und [31m.com[0m ausfÅhren.
-
-.
-:PROGRAM_INTRO_CDROM
-[2J[32;1mWie man ein virtuelles CD-ROM-Laufwerk in DOSBox einbindet:[0m
-DOSBox bietet CD-ROM-Emulation auf mehreren Ebenen.
-
-Dies funktioniert mit allen normalen Verzeichnissen, installiert MSCDEX und markiert die Dateien
-schreibgeschÅtzt. Normalerweise reicht das fÅr die meisten Programme aus:
-
-[34;1mmount D C:\example -t cdrom[0m
-
-Wenn das nicht funktioniert, musst du DOSBox eventuell das Label der CD-ROM mitteilen:
-
-[34;1mmount D C:\example -t cdrom -label CDLABEL[0m
-
-ZusÑtzlich kannst du imgmount benutzen, um iso oder cue/bin Images zu mounten:
-
-[34;1mimgmount D C:\cd.iso -t cdrom[0m
 
 .
 :PROGRAM_INTRO_SPECIAL
@@ -739,7 +754,7 @@ Sie kînnen im [33mkeymapper[0m geÑndert werden.
 [33;1m%s+Enter[0m  Umschalten zwischen Vollbild- und Fenstermodus.
 [33;1m%s+Pause[0m  Pause/Unpause Emulator.
 [33;1m%s+F1[0m   %s Starte den [33mkeymapper[0m.
-[33;1m%s+F4[0m   %s Wechsle das gemountete Disk Image, aktualisiere den Verzeichnis-Cache fÅr alle Laufwerke.
+[33;1m%s+F4[0m   %s Wechsle das gemountete Disk Image, aktualisiere Verzeichnis-Cache.
 [33;1m%s+F5[0m   %s Einen Screenshot speichern.
 [33;1m%s+F6[0m   %s Aufnahme der Soundausgabe in einer Wave-Datei starten/stoppen.
 [33;1m%s+F7[0m   %s Aufnahme der Videoausgabe in einer zmbv-Datei starten/stoppen.
@@ -1177,9 +1192,9 @@ Es ist nur mîglich SUBST auf lokalen Laufwerken zu verwenden
 ∫ [32mWillkommen zu DOSBox Staging %-39s[37m∫
 ∫                                                                     ∫
 ∫ FÅr eine kurze EinfÅhrung fÅr neue Benutzer tippe: [33mINTRO[37m            ∫
-∫ FÅr unterstÅtzte Shell-Befehle gib ein: [33mHELP[37m                        ∫
+∫ FÅr unterstÅtzte Shell-Befehle gib [33mHELP[37m ein.                        ∫
 ∫                                                                     ∫
-∫ Emulierte CPU-Geschwindigkeit anzupassen mit [31m%s+F11[37m und [31m%s+F12[37m.%s%s ∫
+∫ Emulierte CPU-Geschwindigkeit anpassen mit [31m%s+F11[37m und [31m%s+F12[37m.%s%s   ∫
 ∫ Aktiviere den Keymapper mit [31m%s+F1[37m.%s                                ∫
 ∫ Weitere Informationen in der [36mREADME[37m Datei im DOSBox Verzeichnis.    ∫
 ∫                                                                     ∫
@@ -1257,7 +1272,7 @@ DIR [Laufwerk:][Pfad][Dateiname] [/[W|B]] [/P] [/[AD]|[A-D]] [/O[-][N|E|S|D]]
 
 .
 :SHELL_CMD_ECHO_HELP
-Zeigt Meldungen an und aktiviert/deaktiviert das Ausgeben von Befehlen.
+Zeigt Meldungen und aktiviert/deaktiviert die Ausgabe von Befehlen.
 
 .
 :SHELL_CMD_EXIT_HELP
@@ -1299,7 +1314,7 @@ Springt zu einer beschrifteten Zeile in einem Batch-Programm.
 
 .
 :SHELL_CMD_SHIFT_HELP
-Kommandozeilenparameter in einem Batch-Programm nach links verschieben.
+Kommandozeilenparameter eines Batch-Programms nach links verschieben.
 
 .
 :SHELL_CMD_TYPE_HELP
@@ -1350,7 +1365,7 @@ Einem Laufwerk ein internes Verzeichnis zuweisen.
 
 .
 :SHELL_CMD_LOADHIGH_HELP
-LÑdt ein Programm in den oberen Speicher (erfordert xms=true,umb=true).
+LÑdt Programme in den oberen Speicher (erfordert xms=true,umb=true).
 
 .
 :SHELL_CMD_LS_HELP
@@ -1415,5 +1430,70 @@ DOS-Version %d.%02d
 .
 :SHELL_CMD_VER_INVALID
 Die angegebene DOS-Version ist nicht korrekt.
+
+.
+:PROGRAM_INTRO_CDROM_WINDOWS
+[2J[32;1mWie man ein virtuelles CD-ROM-Laufwerk in DOSBox einbindet:[0m
+DOSBox bietet CD-ROM-Emulation auf mehreren Ebenen.
+
+Dies funktioniert mit allen normalen Verzeichnissen, installiert MSCDEX und markiert die Dateien
+schreibgeschÅtzt. Normalerweise reicht das fÅr die meisten Programme aus:
+
+[34;1mmount D C:\beispiel -t cdrom[0m
+
+Wenn das nicht funktioniert, musst du DOSBox eventuell das Label der CD-ROM mitteilen:
+
+[34;1mmount D C:\beispiel -t cdrom -label CDLABEL[0m
+
+ZusÑtzlich kannst du imgmount benutzen, um iso oder cue/bin Images zu mounten:
+
+[34;1mimgmount D C:\cd.iso -t cdrom[0m
+
+[34;1mimgmount D C:\cd.cue -t cdrom[0m
+
+.
+:PROGRAM_INTRO_CDROM_OTHER
+[2J[32;1mWie man ein virtuelles CD-ROM-Laufwerk in DOSBox einbindet:[0m
+DOSBox bietet CD-ROM-Emulation auf mehreren Ebenen.
+
+Dies funktioniert mit allen normalen Verzeichnissen, installiert MSCDEX und markiert die Dateien
+schreibgeschÅtzt. Normalerweise reicht das fÅr die meisten Programme aus:
+
+[34;1mmount D ~/beispiel -t cdrom[0m
+
+Wenn das nicht funktioniert, musst du DOSBox eventuell das Label der CD-ROM mitteilen:
+
+[34;1mmount D ~/beispiel -t cdrom -label CDLABEL[0m
+
+ZusÑtzlich kannst du imgmount benutzen, um iso oder cue/bin Images zu mounten:
+
+[34;1mimgmount D ~/cd.iso -t cdrom[0m
+
+[34;1mimgmount D ~/cd.cue -t cdrom[0m
+
+.
+:SHELL_CMD_HELP_HELP_LONG
+HELP [Befehl]
+
+.
+:SHELL_CMD_DELETE_HELP_LONG
+Verwendung:
+  [32;1mdel[0m [36;1mZEICHENFOLGE[0m
+  [32;1merase[0m [36;1mZEICHENFOLGE[0m
+
+Wobei:
+  [36;1mZEICHENFOLGE[0m kann entweder ein exakter Dateiname sein (wie [36;1mfile.txt[0m) oder ein ungenauer
+          Dateiname sein, der einen oder mehrere Platzhalter verwendet, nÑmlich das Sternchen (*)
+          das fÅr eine beliebige Folge von einem oder mehreren Zeichen steht, und das Fragezeichen
+          (?), das fÅr ein einzelnes Zeichen steht, wie z.B. [36;1m*.bat[0m und [36;1mc?.txt[0m.
+
+Warnung:
+  Sei vorsichtig, wenn du ein Muster mit Platzhaltern verwendest, insbesondere [36;1m*.*[0m, da alle Dateien
+  die mit dem Muster Åbereinstimmen, gelîscht werden.
+
+Beispiele:
+  [32;1mdel[0m [36;1mtest.bat[0m
+  [32;1mdel[0m [36;1mc*.*[0m
+  [32;1mdel[0m [36;1ma?b.c*[0m
 
 .
