Fix typo in man-page regarding cycle adjustment

--- a/docs/dosbox.1
+++ b/docs/dosbox.1
@@ -344,9 +344,9 @@ Kill dosbox.
 .IP Ctrl+F10
 Capture/Release the mouse.
 .IP Ctrl+F11
-Slow down emulation (Increase dosbox Cycles).
+Slow down emulation (Decrease number of cycles/s).
 .IP Ctrl+F12
-Speed up emulation (Decrease dosbox Cycles).
+Speed up emulation (Increase number of cycles/s).
 .IP Alt+F12
 Unlock speed (turbo button).
 .PP
