--- a/contrib/translations/utf-8/de/de-0.78.0-alpha.txt
+++ b/contrib/translations/utf-8/de/de-0.78.0-alpha.txt
@@ -320,9 +320,9 @@ Die High DMA Nummer des Sound Blasters.
 Erlaube dem Sound Blaster Mixer, den DOSBox Mixer zu modifizieren.
 .
 :CONFIG_SBWARMUP
-Silence initial DMA content after card power-on, in milliseconds.
+Silence initial DMA audio after card power-on, in milliseconds.
 This mitigates pops heard when starting many SB-based games.
-.Reduce this if you notice cut-samples or prefer hardware accuracy.
+Reduce this if you notice intial playback is missing audio.
 .
 :CONFIG_OPLRATE
 oplrate ist veraltet. Die OPL Signale werden nun mit der Sampelrate
