--- a/contrib/translations/utf-8/fr/fr-0.78.0-alpha.txt
+++ b/contrib/translations/utf-8/fr/fr-0.78.0-alpha.txt
@@ -324,9 +324,9 @@ Numéro High DMA de la Sound Blaster.
 Permet au mixer Sound Blaster de modifier le mixer de DOSBox.
 .
 :CONFIG_SBWARMUP
-Silence initial DMA content after card power-on, in milliseconds.
+Silence initial DMA audio after card power-on, in milliseconds.
 This mitigates pops heard when starting many SB-based games.
-.Reduce this if you notice cut-samples or prefer hardware accuracy.
+Reduce this if you notice intial playback is missing audio.
 .
 :CONFIG_OPLRATE
 oplrate est déprécié . La forme d'onde OPL waveform est maintenant échantillonnée
