--- a/contrib/translations/utf-8/it/it-0.78.0-alpha.txt
+++ b/contrib/translations/utf-8/it/it-0.78.0-alpha.txt
@@ -348,9 +348,9 @@ Canale High DMA della scheda audio Sound Blaster.
 Permetti al mixer della scheda Sound Blaster di modificare il mixer di DOSBox.
 .
 :CONFIG_SBWARMUP
-Silence initial DMA content after card power-on, in milliseconds.
+Silence initial DMA audio after card power-on, in milliseconds.
 This mitigates pops heard when starting many SB-based games.
-.Reduce this if you notice cut-samples or prefer hardware accuracy.
+Reduce this if you notice intial playback is missing audio.
 .
 :CONFIG_OPLRATE
 oplrate è deprecato. La forma d'onda OPL viene ora campionata alla velocità di
